@@ -20,6 +20,7 @@
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
 #include <Rcpp/CharacterVector.h>
+#include <Rcpp/wrap.h>
 
 namespace Rcpp{
 
@@ -41,7 +42,11 @@ CharacterVector::CharacterVector( const std::string& x) : VectorBase() {
 CharacterVector::CharacterVector( const std::vector<std::string>& x): VectorBase() {
 	assign( x.begin(), x.end() ) ;
 }
-	
+
+CharacterVector::CharacterVector( const Dimension& dims): VectorBase(){
+	setSEXP( Rf_allocVector( STRSXP, dims.prod() ) ) ;
+	if( dims.size() > 1 ) attr( "dim" ) = dims ;
+}
 
 /* proxy stuff */
 
@@ -101,22 +106,5 @@ CharacterVector::StringProxy CharacterVector::operator()( const size_t& i, const
 	return StringProxy(*this, offset(i,j) ) ;
 }
 
-// void CharacterVector::assign( const char** first, const char** last){
-// 	size_t size = std::distance( first, last ) ;
-// 	SEXP x = m_sexp ;
-// 	bool update = false ;
-// 	if( length() != size ){
-// 		x = Rf_allocVector( STRSXP, size ) ;
-// 		update = true ;
-// 	}
-// 	for( size_t i=0; i<size; i++, ++first){
-// 		SET_STRING_ELT( x, i, Rf_mkChar(*first)) ;
-// 	}
-// 	if( update ) setSEXP( x ) ;
-// }
-	
-// CharacterVector::CharacterVector( const char** const first, const char** const last) : VectorBase(){
-// 	assign( first, last ) ;
-// }
 
 } // namespace 
